validate png output width and height, revert change in svg width/height

--- a/views/pages/tools/svg-to-png.ejs
+++ b/views/pages/tools/svg-to-png.ejs
@@ -17,8 +17,8 @@
         <div style="line-height: 200%">
             <span class="tooltext">Save Options:</span>
             <br />
-            Width: <input id="width-input" style="width: 75px" type="number" max="9999" placeholder="100" /><br />
-            Height: <input id="height-input" style="width: 75px" type="number" max="9999" placeholder="100" /><br />
+            Width: <input id="width-input" style="width: 75px" type="number" min="1" max="9999" placeholder="100" /><br />
+            Height: <input id="height-input" style="width: 75px" type="number" min="1" max="9999" placeholder="100" /><br />
             <button id="save-png" style="margin-left: 0">Save PNG</button>
         </div>
         <div>
