--- a/views/pages/info/queer-calendar.ejs
+++ b/views/pages/info/queer-calendar.ejs
@@ -5,7 +5,8 @@
 
         <span id="events" style="color: mediumspringgreen; display: block; padding-bottom: 25px"><span class="error">Loading data...</span></span>
 
-        Month: <input id="month" type="text" pattern="[0-9]*" max="12" maxlength="2" style="width: 30px" /><tab></tab>
+        Month: <input id="month" type="text" pattern="[0-9]*" max="12" maxlength="2" style="width: 30px" />
+        <div class="tab"></div>
 
         Date: <input id="date" type="text" pattern="[0-9]*" max="31" maxlength="2" style="width: 30px" />
 
