--- a/views/pages/fun/astronomy-picture.ejs
+++ b/views/pages/fun/astronomy-picture.ejs
@@ -5,9 +5,11 @@
 
         <br /><br />Fetch from specified date:<br />
 
-        Year: <input id="year" type="text" pattern="[0-9]*" maxlength="4" style="width: 45px" /><tab></tab>
+        Year: <input id="year" type="text" pattern="[0-9]*" maxlength="4" style="width: 45px" />
+        <div class="tab"></div>
 
-        Month: <input id="month" type="text" pattern="[0-9]*" max="12" maxlength="2" style="width: 30px" /><tab></tab>
+        Month: <input id="month" type="text" pattern="[0-9]*" max="12" maxlength="2" style="width: 30px" />
+        <div class="tab"></div>
 
         Date: <input id="date" type="text" pattern="[0-9]*" max="31" maxlength="2" style="width: 30px" />
 
