--- a/views/pages/info/minecraft-codes.ejs
+++ b/views/pages/info/minecraft-codes.ejs
@@ -3,7 +3,7 @@
         <span style="font-size: 27px" class="mcui-text format-2"><span class="format-l">Minecraft</span></span> Formatting Codes:
     </h1>
     <p class="info">For more information about formatting codes, see <a href="https://minecraft.fandom.com/wiki/Formatting_codes" target="_blank">here</a>.</p>
-    <div class="warning mc-scroll-msg">Scroll →</div>
+    <div class="warning scroll-message">Scroll →</div>
     <table class="info-table">
         <thead>
             <tr>
