--- a/views/pages/info/state-abbreviations.ejs
+++ b/views/pages/info/state-abbreviations.ejs
@@ -1,6 +1,7 @@
 <div class="toolbox">
     <h1>State Abbreviations:</h1>
-    <table class="info-table" style="overflow-x: hidden; margin-top: 30px">
+    <div class="warning scroll-message">Scroll →</div>
+    <table class="info-table">
         <thead>
             <tr>
                 <th>State</th>
