--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -99,7 +99,8 @@
                     <kbd>Option</kbd> + <kbd>S</kbd>: Opens GitHub repository (new tab)<br />
                     <kbd>Option</kbd> + <kbd>P</kbd>: Opens page source (GitHub, new tab)<br />
                     <kbd>Option</kbd> + <kbd>Shift</kbd> + <kbd>P</kbd>: Opens page script (or global script if no script) (GitHub, new tab)<br />
-                    <kbd>Option</kbd> + <kbd>/</kbd>: Selects search bar
+                    <kbd>Option</kbd> + <kbd>/</kbd>: Selects search bar<br />
+                    <kbd>Option</kbd> + <kbd>T</kbd>: Scroll to the top of the page
                 </div>
             </div>
         </div>
