--- a/views/pages/fun/mp3-player.ejs
+++ b/views/pages/fun/mp3-player.ejs
@@ -6,7 +6,7 @@
             <div class="player">
                 <div class="information" style="padding-top: 20px">
                     <div id="timer">00:00</div>
-                    <div id="title" style="margin-left: 10px; width: 210px; text-align: center"></div>
+                    <div id="title" style="margin-left: 10px; width: 210px; text-align: center">Loading...</div>
                     <div id="duration" style="margin-left: 10px">00:00</div>
                 </div>
                 <div class="progress" style="width: 100%; background-color: #d9d9f2; cursor: pointer; border-radius: 10px; margin-top: 15px">
