--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -55,7 +55,7 @@
         <% if (script && page) { %>
         <script src="/scripts/pages/<%= page %>.js" type="module"></script>
         <% } %> <% for (let i = 0; i < additionalScripts.length; i++) { %>
-        <script src="<%= additionalScripts[i] %>" type="module"></script>
+        <script src="<%= additionalScripts[i] %>" defer></script>
         <% } %>
     </head>
     <body>
@@ -95,7 +95,7 @@
                 <div id="shortcuts-list">
                     <kbd>Option</kbd> + <kbd>K</kbd>: Opens keyboard shortcut menu (this menu)<br />
                     <kbd>Option</kbd> + <kbd>C</kbd>: Clears clipboard<br />
-                    <kbd>Option</kbd> + <kbd>H</kbd>: Opens homepage (current tab)<br />
+                    <kbd>Option</kbd> + <kbd>H</kbd>: Opens homepage (current tab, new tab with <kbd>Meta</kbd>/<kbd>⌘ Cmd</kbd>)<br />
                     <kbd>Option</kbd> + <kbd>S</kbd>: Opens GitHub repository (new tab)<br />
                     <kbd>Option</kbd> + <kbd>P</kbd>: Opens page source (GitHub, new tab)<br />
                     <kbd>Option</kbd> + <kbd>Shift</kbd> + <kbd>P</kbd>: Opens page script (or global script if no script) (GitHub, new tab)<br />
