--- a/views/pages/tools/heic-converter.ejs
+++ b/views/pages/tools/heic-converter.ejs
@@ -1,18 +1,11 @@
 <div class="toolbox">
-    <h1>Image Converter:</h1>
+    <h1><span data-tooltip="High Efficiency Image File">HEIC</span> Converter:</h1>
     <div class="tooltext">
-        <div class="basic-grid" style="--min-width: 450px">
-            <div class="tooltext">
-                Image:<br /><br />
-                <label for="file-upload" class="file-upload"><i class="fa-solid fa-file-upload"></i> Upload</label>
-                <input id="file-upload" type="file" /><br /><span style="font-size: 14px; color: dimgray" id="file-message"></span> <br />
-                <button id="load" disabled>Load</button>
-                <button id="clear">Clear</button>
-            </div>
-            <div class="tooltext">
-                Image Preview:<br />
-                <canvas id="image-preview" style="max-width: 80%" width="0" height="0"></canvas>
-            </div>
+        <div class="tooltext">
+            Image:<br /><br />
+            <label for="file-upload" class="file-upload"><i class="fa-solid fa-file-upload"></i> Upload</label>
+            <input id="file-upload" type="file" /><br /><span style="font-size: 14px; color: dimgray" id="file-message"></span> <br />
+            <button id="clear">Clear</button>
         </div>
         <hr style="margin-top: 30px" />
         <div class="basic-grid" style="--min-width: 450px">
@@ -21,10 +14,11 @@
                 <select id="output-type" disabled>
                     <option value="png" selected>PNG (Portable Network Graphics)</option>
                     <option value="jpeg">JPEG (Joint Photographic Experts Group)</option>
-                    <option value="webp">WebP (WebP Image)</option>
+                    <option value="gif">GIF (Graphics Interchange Format)</option>
                 </select>
                 <br />
                 <button id="convert" disabled>Convert</button>
+                <span id="converting-message"></span>
             </div>
             <div class="tooltext">
                 Converted Image:<br />
