--- a/views/pages/tools/image-converter.ejs
+++ b/views/pages/tools/image-converter.ejs
@@ -5,7 +5,7 @@
             <div class="tooltext">
                 Image:<br /><br />
                 <label for="file-upload" class="file-upload"><i class="fa-solid fa-file-upload"></i> Upload</label>
-                <input id="file-upload" type="file" /><br /><span style="font-size: 14px; color: dimgray" id="file-message"></span> <br />
+                <input id="file-upload" type="file" accept="image/*" /><br /><span style="font-size: 14px; color: dimgray" id="file-message"></span> <br />
                 <button id="load" disabled>Load</button>
                 <button id="clear">Clear</button>
             </div>
