--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -59,7 +59,8 @@ code {
     font-size: 85%;
     line-height: 1.125rem;
     padding: 0.2em;
-    white-space: pre;
+    white-space: pre-wrap;
+    word-break: break-all;
 }
 
 hr {
