added color history and full screen color preview to `color-info`

--- a/views/pages/tools/color-info.ejs
+++ b/views/pages/tools/color-info.ejs
@@ -37,4 +37,10 @@
             Temperature (Kelvin, estimated, from <a href="https://www.zombieprototypes.com/?p=210" target="_blank">color temperature scale</a>): <input id="temperature" style="width: 4rem" disabled /> <button id="copy-temperature">Copy</button><br />
         </div>
     </div>
+
+    <div class="tooltext" style="margin-top: 20px">Color History (click to switch):</div>
+    <div id="color-history"></div>
+    <div id="full-color">
+        <div id="full-color-message">Press <kbd>Escape</kbd> or click anywhere to exit this menu!</div>
+    </div>
 </div>
