--- a/views/pages/tools/video-converter.ejs
+++ b/views/pages/tools/video-converter.ejs
@@ -4,7 +4,7 @@
         <div class="tooltext">
             Video:<br /><br />
             <label for="file-upload" class="file-upload"><i class="fa-solid fa-file-upload"></i> Upload</label>
-            <input id="file-upload" type="file" accept="audio/*" /><br /><span style="font-size: 14px; color: dimgray" id="file-message"></span> <br />
+            <input id="file-upload" type="file" accept="video/*" /><br /><span style="font-size: 14px; color: dimgray" id="file-message"></span> <br />
             <button id="clear">Clear</button>
         </div>
         <hr style="margin-top: 30px" />
