--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -917,7 +917,7 @@ button:not(.fakeinput) {
     background-color: #252525;
     border: 1px solid #444;
     border-radius: 4px;
-    color: white;
+    color: #ddd;
     cursor: pointer;
     font-family: 'Source Sans Pro', sans-serif;
     height: max-content;
@@ -1154,6 +1154,7 @@ a[href='/tools/countdowns'] i.fa-regular.fa-hourglass {
     background-position: 0 0, 5px 5px;
     background-size: 10px 10px;
     border: 4px solid #16181c;
+    cursor: pointer;
     height: 100px;
     margin-top: 15px;
     position: absolute;
@@ -1169,6 +1170,49 @@ a[href='/tools/countdowns'] i.fa-regular.fa-hourglass {
     position: absolute;
     top: 0;
     width: 100%;
+}
+
+#color-history {
+    border: 4px solid #16181c;
+    height: 105px;
+    max-width: 90%;
+    overflow-y: scroll;
+    padding: 15px;
+    padding-left: 10px;
+    width: 90%;
+}
+
+#color-history li {
+    cursor: pointer;
+    display: inline-block;
+    list-style-type: none;
+    margin-inline: 5px;
+}
+
+#color-history li:hover {
+    filter: brightness(0.7);
+}
+
+#full-color {
+    background-color: #16181c;
+    cursor: pointer;
+    display: none;
+    height: 100%;
+    left: 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10000;
+}
+
+#full-color-message {
+    background-color: #d8d8d8;
+    border-top-left-radius: 10px;
+    bottom: 0;
+    color: black;
+    padding: 20px;
+    position: absolute;
+    right: 0;
 }
 
 .large-search-box {
