--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,19 +6,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <meta name="robots" content="index, follow" />
-        <title><% if (title) { %><%= title %> | <% } %>Eejit's Tools</title>
+        <title><%= title ? `${title} | ` : '' %>Eejit's Tools</title>
         <!-- Search Engine -->
-        <meta name="title" content="<% if (title) { %><%= title %><% } else { %>Eejit's Tools<% } %>" />
-        <meta name="description" content="<% if (description) { %><%= description %><% } else { %>Some useful tools for general purposes!<% } %>" />
+        <meta name="title" content="<%= title || "Eejit's Tools" %>" />
+        <meta name="description" content="<%= descriptionParsed || 'Some useful tools for general purposes!'%>" />
         <meta name="keywords" content="eejitstools" />
         <meta property="image" content="https://eejitstools.com/favicons/icon.png" />
         <!-- Schema.org for Google -->
-        <meta itemprop="name" content="<% if (title) { %><%= title %><% } else { %>Eejit's Tools<% } %>" />
-        <meta itemprop="description" content="<% if (description) { %><%= description %><% } else { %>Some useful tools for general purposes!<% } %>" />
+        <meta itemprop="name" content="<%= title || "Eejit's Tools" %>" />
+        <meta itemprop="description" content="<%= descriptionParsed || 'Some useful tools for general purposes!'%>" />
         <meta itemprop="image" content="https://eejitstools.com/favicons/icon.png" />
         <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-        <meta property="og:title" content="<% if (title) { %><%= title %><% } else { %>Eejit's Tools<% } %>" />
-        <meta property="og:description" content="<% if (description) { %><%= description %><% } else { %>Some useful tools for general purposes!<% } %>" />
+        <meta property="og:title" content="<%= title || "Eejit's Tools" %>" />
+        <meta property="og:description" content="<%= descriptionParsed || 'Some useful tools for general purposes!'%>" />
         <meta property="og:image" content="https://eejitstools.com/favicons/icon.png" />
         <meta property="og:image:alt" content="Eejit's Tools Wrench" />
         <meta property="og:url" content="https://eejitstools.com" />
@@ -27,8 +27,8 @@
         <meta property="og:type" content="website" />
         <!-- Twitter -->
         <meta name="twitter:card" content="summary" />
-        <meta name="twitter:title" content="<% if (title) { %><%= title %> | <% } %>Eejit's Tools" />
-        <meta name="twitter:description" content="<% if (description) { %><%= description %><% } else { %>Some useful tools for general purposes!<% } %>" />
+        <meta name="twitter:title" content="<%= title ? `${title} | ` : '' %>Eejit's Tools" />
+        <meta name="twitter:description" content="<%= descriptionParsed || 'Some useful tools for general purposes!'%>" />
         <meta name="twitter:url" content="https://eejitstools.com" />
         <meta name="twitter:image" content="https://eejitstools.com/favicons/icon.png" />
         <meta name="twitter:image:alt" content="Eejit's Tools Wrench" />
@@ -46,16 +46,16 @@
 
         <!-- Styles -->
         <link rel="stylesheet" href="/styles/styles.css" />
-        <% for (let i = 0; i < additionalStyles.length; i++) { %>
-        <link rel="stylesheet" href="<%= additionalStyles[i] %>" />
+        <% for (const style of additionalStyles) { %>
+        <link rel="stylesheet" href="<%= style %>" />
         <% } %>
 
         <!-- Scripts -->
         <script src="/scripts/global.js" type="module"></script>
-        <% if (script && page) { %>
-        <script src="/scripts/pages/<%= page %>.js" type="module"></script>
-        <% } %> <% for (let i = 0; i < additionalScripts.length; i++) { %>
-        <script src="<%= additionalScripts[i].link %>"<% if (additionalScripts[i].module) { %> type="module"<% } %>></script>
+        <% if (script) { %>
+        <script src="/scripts/pages/<%= category %>/<%= name %>.js" type="module"></script>
+        <% } %> <% for (const script of additionalScripts) { %>
+        <script src="<%= script.link %>"<%- script.module ? 'type="module"' : '' %>></script>
         <% } %>
     </head>
     <body>
