--- a/views/pages/info/phonetic-alphabet.ejs
+++ b/views/pages/info/phonetic-alphabet.ejs
@@ -7,11 +7,13 @@
                 <th>Code Word</th>
             </tr>
         </thead>
-        <tbody><% for (let i = 0; i < alphabet.length; i++) { %>
+        <tbody>
+            <% for (const entry of phoneticAlphabet) { %>
             <tr>
-                <td><%= alphabet[i].letter %></td>
-                <td><%= alphabet[i].codeWord %></td>
-            </tr><% } %>
+                <td><%= entry.letter %></td>
+                <td><%= entry.codeWord %></td>
+            </tr>
+            <% } %>
         </tbody>
     </table>
 </div>
