--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,4 +1,4 @@
 <div class="large-search-box">
-    <input class="large-search-text" type="text" placeholder="Search here..." /><i class="large-search-btn fa-solid fa-search"></i>
+    <input class="large-search-text" type="text" placeholder="Search here..." /><i class="large-search-button fa-solid fa-search"></i>
     <div class="large-search-results"></div>
 </div>
