simplify layout (add buttons to table header)

--- a/public/styles/coins.css
+++ b/public/styles/coins.css
@@ -135,3 +135,7 @@ tr[data-obtained='true'] {
 tr[data-upgrade='true'] {
     background-color: #414187;
 }
+
+.coin-variant-note {
+    text-decoration: none;
+}
