add toggle spacers option for binary calculator

--- a/views/pages/tools/binary-calc.ejs
+++ b/views/pages/tools/binary-calc.ejs
@@ -20,6 +20,6 @@
             <option value="3">Decimal (10)</option>
             <option value="4">Hex (16)</option>
         </select>
-        <br /><input id="output" readonly /> <br /><button id="copy-output" disabled>Copy</button>
+        <br /><input id="output" readonly /><br /><button id="copy-output" disabled>Copy</button> <button id="toggle-spacers" disabled>Toggle spacers (spaces, commas)</button>
     </div>
 </div>
