--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -22,6 +22,8 @@
 
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 html {
@@ -50,6 +52,7 @@ a:hover {
 
 h1 {
     font-weight: 600;
+    padding-block: 20px;
 }
 
 code {
@@ -922,7 +925,7 @@ button:not(.fakeinput) {
     cursor: pointer;
     font-family: 'Source Sans Pro', sans-serif;
     height: max-content;
-    margin: 3px;
+    margin: 3px 0;
     padding: 0.2rem 0.3rem;
     transition: all 0.2s ease;
     width: max-content;
@@ -1481,8 +1484,8 @@ a[href='/tools/countdowns'] i.fa-regular.fa-hourglass {
 a#apod-link {
     display: block;
     margin: 20px auto;
-    width: 900px;
     max-width: 90%;
+    width: 900px;
 }
 
 a#apod-link > img {
@@ -1490,20 +1493,20 @@ a#apod-link > img {
 }
 
 div#apod-embed-container {
-    position: relative;
-    overflow: hidden;
     margin: 15px auto;
-    width: 900px;
     max-width: 90%;
+    overflow: hidden;
     padding-top: 40%;
+    position: relative;
+    width: 900px;
 }
 
 div#apod-embed-container > iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
     bottom: 0;
-    right: 0;
-    width: 100%;
     height: 100%;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 100%;
 }
