add left margin to coin variant expand button

--- a/public/styles/coins.css
+++ b/public/styles/coins.css
@@ -155,3 +155,7 @@ tr[data-upgrade='true'] {
     cursor: pointer;
     text-decoration: underline dotted;
 }
+
+button.coin-variant-expand {
+    margin-left: 5px;
+}
