--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -75,10 +75,10 @@
             </a>
             <span style="float: right">
                 <div class="search-box mobile-hidden">
-                    <input class="search-text" type="text" placeholder="Search here..." /><i class="search-button fa-solid fa-search"></i><br />
+                    <input class="search-text" type="text" placeholder="Search here..." /><i class="search-button fa-solid fa-magnifying-glass"></i><br />
                     <div class="search-results"></div>
                 </div>
-                <a href="/tools/time" class="nav-time"><span id="time-display">Loading...</span></a>
+                <a href="/tools/time" class="nav-time"><span id="time-display">Loading...</span> <i id="time-icon" class="fa-solid fa-triangle-exclamation"></i></a>
                 <a href="https://github.com/Eejit43/eejitstools-v2" target="_blank" class="source">Source <i class="fa-brands fa-github" style="margin-left: 3px; transform: translateY(1.5px)"></i></a>
             </span>
         </nav>
