--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <br />
     <div class="message">
         Welcome to my site! Here are some handy tools I made whilst learning
-        <span class="tooltip-bottom" data-tooltip="Hypertext Markup Language">HTML</span>, <span class="tooltip-bottom" data-tooltip="Cascading Style Sheets">CSS</span>, and JavaScript!
+        <i class="fa-brands fa-html5"></i> <span class="tooltip-bottom" data-tooltip="Hypertext Markup Language">HTML</span>, <i class="fa-brands fa-css3-alt"></i> <span class="tooltip-bottom" data-tooltip="Cascading Style Sheets">CSS</span>, and <i class="fa-brands fa-square-js"></i> JavaScript!
         <span class="mobile-only"><br /><br /><a href="/search">Search the site!</a></span>
     </div>
 </header>
